final presentation with content updates

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -10,11 +10,146 @@
 <div class="reveal">
 	<div class="slides">
 		<section>
-			<h1>The Great Presentation Title</h1>
-			<aside class="notes">notes:</aside>
+			<h1>Frontend workflow 2016</h1>
+			<aside class="notes">
+				<ul>
+					<li>Frontend workflow has drastically changed in last 5 years in fasinating ways.
+						Its not just html/css/js.. It way more than what you could immmmmagine!</li>
+					<li>Most of the processes are automated</li>
+					<li>If you're still using old school methods like code, save, reload, repeat,.. Let me give you a free advise, upgrade &amp; a free warning, Its huge!</li>
+					<li>Welcome to the</li>
+				</ul>
+			</aside>
+		</section>
+		<section>
+			<h2>Prepare windows</h2>
+			<h4>Create a peaceful environment in windows with</h4>
+			<ul>
+				<li class="fragment">
+					A Software manager
+					<div class="fragment">
+						<a href="//chocolatey.org/"><img src="../img/logo-choco.jpg" width="500" alt=""/></a>
+						<hr />
+					</div>
+				</li>
+				<li class="fragment">
+					A better command line
+					<div class="fragment">
+						<a href="//conemu.github.io/"><img src="../img/logo-conemu.jpg" width="500" alt="" /></a>
+					</div>
+				</li>
+			</ul>
+			<aside class="notes">
+				<ul>
+					<li>Modern workflow uses a quality time of development in command line</li>
+					<li>Command prompts in windows sucks</li>
+					<li>With chocolately all your installations happens in command line</li>
+				</ul>
+			</aside>
+		</section>
+		<section>
+			<h1>Version control</h1>
+			<hr />
+			<h2>
+				<img src="../img/logo-git.png" style="height: 1.5em; vertical-align: middle; border: none; background: #fff; box-shadow: none;"> -
+				Distributed VCS
+			</h2>
+			<h3>Posh git - A git helper shell script</h3>
+			<p>Special mention: github.com</p>
+		</section>
+		<section>
+			<section>
+				<h2>Primary Beats</h2>
+				<ul>
+					<li>Chrome dev tools</li>
+					<li>Adb - Android debugging bridge</li>
+					<li>localtunnel / ngrok</li>
+					<li>XAMPP / Winginx</li>
+					<li>and</li>
+				</ul>
+			</section>
+			<section data-background="#fff" data-background-transition="zoom" data-transition="slide">
+				<img src="../img/logo-nodejs.png" alt="" style="border: none; background: none; box-shadow: none;">
+				<aside class="notes">
+					<p>Node is the base technology behind modern frontend work flow.</p>
+					<p>Even its a famouse server technology, its really an env that runs on any platform. Whether its server / local pc / mac</p>
+				</aside>
+			</section>
+			<section>
+				<h2>Package Managers</h2>
+				<p>
+					<img src="../img/logo-npm.png" alt="" height="100" style="border: none; background: none; box-shadow: none;">
+					<img src="../img/logo-bower.png" alt="" height="200" style="border: none; background: none; box-shadow: none;">
+				</p>
+				<aside class="notes">
+					<p>Package managers are the key features of workflow</p>
+					<p>It manages the project dependencies</p>
+				</aside>
+			</section>
+		</section>
+		<section data-background="#fff">
+			<h1 style="color: #333">Build system</h1>
+			<br>
+			<p>
+				<img src="../img/logo-grunt.png" alt="" height="200" style="border: none; background: none; box-shadow: none;">
+				<img src="../img/logo-gulp.png" alt="" height="200" style="border: none; background: none; box-shadow: none; margin: 0 100px">
+				<img src="../img/logo-webpack.png" alt="" height="200" style="border: none; background: none; box-shadow: none;">
+			</p>
+		</section>
+		<section data-background="#1b837d">
+			<section>
+				<h1>Pre processors</h1>
+				<p>An improved - maintainable - easy - way of coding</p>
+			</section>
+			<section>
+				<p>
+					<img src="../img/logo-sass.png" alt="" height="200" style="border: none; background: none; box-shadow: none; vertical-align: middle; margin-right:20px">
+					<img src="../img/logo-less.png" alt="" height="100" style="border: none; background: none; box-shadow: none; vertical-align: middle">
+				</p>
+				<h2>for CSS</h2>
+			</section>
+			<section>
+				<p>
+					<img src="../img/logo-babel.png" alt="" height="150" style="border: none; background: none; box-shadow: none; vertical-align: middle; margin-right:20px">
+					<img src="../img/logo-typescript.png" alt="" height="150" style="border: none; background: none; box-shadow: none; vertical-align: middle">
+				</p>
+				<h2>for javascript</h2>
+			</section>
+			<section>
+				<p>
+					<img src="../img/logo-jade.png" alt="" height="150" style="border: none; background: none; box-shadow: none; vertical-align: middle; margin-right:50px">
+					<img src="../img/logo-haml.png" alt="" height="150" style="border: none; background: none; box-shadow: none; vertical-align: middle">
+				</p>
+				<h2>for HTML</h2>
+			</section>
+		</section>
+		<section>
+			<h1>Scaffholding</h1>
+			<p>
+				<img src="../img/logo-yeoman.png" alt="" style="border: none; background: #fff; box-shadow: none; vertical-align: middle;">
+			</p>
+			<p>Powered by its generators</p>
+		</section>
+		<section>
+			<h1>Demo</h1>
+			<p>
+				<img src="../img/logo-npm.png" alt="" height="100" style="border: none; background: none; box-shadow: none; vertical-align: middle; margin-right:50px">
+				<img src="../img/logo-grunt.png" alt="" height="150" style="border: none; background: none; box-shadow: none; vertical-align: middle; margin-right:50px">
+				<img src="../img/logo-less.png" alt="" height="100" style="border: none; background: none; box-shadow: none; vertical-align: middle">
+			</p>
+			<aside class="notes">
+				<ul>
+					<li>yo simple-html</li>
+				</ul>
+			</aside>
+		</section>
+		<section>
+			<h1>Questions ?</h1>
 		</section>
 		<section>
 			<h1>Thank you :)</h1>
+			<p><a href="//facebook.com/groups/KRDSFrontendMeetup">facebook.com/groups/KRDSFrontendMeetup</a></p>
+			<p><a href="//github.com/moorthy-g">github.com/moorthy-g</a></p>
 		</section>
 	</div>
 </div>
