add share image

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Frontend workflow</title>
+	<meta property="og:image" content="http://krdsmeetup.github.io/prez-frontend-workflow/img/share.jpg">
+	<meta property="og:image:secure_url" content="https://krdsmeetup.github.io/prez-frontend-workflow/img/share.jpg">
 	<meta name="description" content="A presentation gives an overview of the 2016's front end workflow related tools as well as base windows workflow setup">
 	<meta name="author" content="Moorthy G">
 </head>
